--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -77,7 +77,7 @@ One of the goal of this book is to present you a methodology and toolkit that wi
 
 Customers and end users see complexity as _interface complexity_. 
 
-Interface complexity can be driven by a lot of elements, for example the probability of making an error while using the app, the difficulty to understand the logical progression in the app, the presence of unfamiliar behavior or terms, visual distractions...
+Interface complexity can be driven by a lot of elements, for example the probability of making an error while using the app, the difficulty to understand the logical progression in the app, the presence of unfamiliar behavior or terms, visual distractions, etc.
 This book will also bring you strategy to help you cope with the need for simplification when it comes to designing interface. 
 
 ### Balancing complexities
@@ -171,7 +171,7 @@ As noted in _The Art of Unix Programming_ [@ericraymond2003], "Chapter 13: Speak
 Still, this metric can be useful to reinforce what you have learned from other metrics.
 It is rather unlikely that you will find this "extreme" coding style we showed above, and even if it might not make sense to compare two codebases that just differ by 1 or 2 % of lines of code, it is very likely that a codebase which is ten, one hundred, one thousand times larger is a more complex software. 
 
-Another good metric related to this metric is the number of files in the project: R developers tend to split their functions into several files, so the more files you will find in a project, the larger the codebase is. 
+Another good metric related to code complexity is the number of files in the project: R developers tend to split their functions into several files, so the more files you will find in a project, the larger the codebase is. 
 And numerous files can also be a sign of maintenance complexity, as it may be harder to reason about an app logic split into several files than about something that fits into one linear code inside one file
 ^[
 To handle the complexity of splitting into files, you can set filenames to follow the structure of the project. This pattern is developed in another part of this book, where we explicit the conventions used in `{golem}`.
@@ -325,7 +325,7 @@ And, bonus, this `cyclocomp_package()` function can also be used to retrieve the
 
 So, as The Clash said, "what are we gonna do now?" 
 You might have heard this saying: "if you copy and paste a piece of code twice, you should write a function", so you might be tempted to do that. 
-Indeed, splitting code into smaller pieces lower the local cyclomatic complexity, as smaller functions have lower cyclomatic complexity. 
+Indeed, splitting code into smaller pieces lowers the local cyclomatic complexity, as smaller functions have lower cyclomatic complexity. 
 But that is just at a local level, and it can be a suboptimal option: having a very large number of functions can make it harder to navigate through the codebase.
 In the end of the day splitting into smaller functions is not a magic solution because (A) the global complexity of the app is not lowered by splitting things into pieces (just local complexity), and (B) the deeper the call stack, the harder it can be to debug. 
 
