--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -13,7 +13,7 @@ Whatever your ambitions for your Shiny application are, you should take time tod
 A common thing you will hear about Shiny is that it is a good prototyping tool. 
 This can not be denied.
 Building a Proof of Concept (POC) for an app is relatively straightforward if you compare to what it needs to build applications in other languages. 
-With Shiny, you can build a "it works on my machine" web application in a couple of hours, and show it to your team, your boss, your investors...
+With Shiny, you can build a "it works on my machine" web application in a couple of hours, and show it to your team, your boss, your investors.
 Thanks to the way Shiny was designed, you do not have to care about websockets, ports, HTML, JavaScript libraries, and all the things that are elegantly bundled into Shiny. 
 
 Hence, you can have a quick, hacky application that will work on your machine, and that, very rapidly. 
@@ -41,7 +41,7 @@ That way, you are getting ready for complexity, and if, one day, you need to tur
 
 The KISS principle, as "Keep It Simple, Stupid", should drive the implementation of features in the application to allow anyone in the future, including original developers, to take over on the development.
 
-The story behind this principle is supposed to be that Kelly Johnson, lead engineer at the Lockheed Skunk Works, gave his workers a set of very common tools and said that every airplanes should be repairable with these tools, and these tools only, so that repairing an aircraft should be possible for any average engineer. 
+The story behind this principle is supposed to be that Kelly Johnson, lead engineer at the Lockheed Skunk Works, gave his workers a set of very common tools and said that every airplane should be repairable with these tools, and these tools only, so that repairing an aircraft should be possible for any average engineer. 
 
 This should be a principle to keep in mind when building application. 
 Indeed, large scale Shiny projects can lead to many people working on the code base, for a long period of time. 
@@ -96,7 +96,7 @@ knitr::include_graphics("img/app_tree.png")
 + Extract your core "non-reactive" functions, that we will also call the "business logic", and include them in external files, so that you can work on these outside of the app.
 Working on independent functions to implement features will prevent you to relaunch the whole application every time you need to add something new.
 
-We will get back to Shiny modules and how to organized your project in the next chapter. 
+We will get back to Shiny modules and how to organize your project in the next chapter. 
 
 ### From the Team Point of View
 
@@ -115,13 +115,13 @@ The project manager will be the one that kicks off the project, and write the fi
 If you follow this book's workflow, this person will first create a `{golem}` project, fill the information, and define the application structure by providing the main modules, and potentially work on the prototyped UI of the app. 
 
 Once the skeleton of the app is created, this person in charge will list all the things that have to be done.
-We strongly suggest to use git with a graphical interface (Gitlab, Github, Bitbucket, ...), as the graphical interface of these services will help you manage the project. 
+We strongly suggest to use git with a graphical interface (Gitlab, Github, Bitbucket, etc.), as the graphical interface of these services will help you manage the project. 
 These tasks are defined as issues, and will be closed during development.
 These interfaces can also be used to set continuous integration.
 
-If the team follows a `git flow` (described in chapter \\@(ref: secure)), the manager will also be in charge of reviewing and accepting the pull/merge requests to the main `dev` branch if they solve the associated issues.
+If the team follows a `git flow` (described in chapter \@(ref: secure)), the manager will also be in charge of reviewing and accepting the pull/merge requests to the main `dev` branch if they solve the associated issues.
 
-Do not worry if this sounds like a foreign language to you, we will get back to this method later in this book (chapter \\@(ref: secure)). 
+Do not worry if this sounds like a foreign language to you, we will get back to this method later in this book (chapter \@(ref: secure)). 
 
 #### Developers
 
