Chapter 03 suggestions, plus pkg quote for {golem}.

--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -21,7 +21,7 @@ On top of these files, what so you needed to make it __a production-ready applic
 #### Metadata
 
 First of all, __metadata__.
-In other words, all the necessary information for something that runs in production: the name of the app, the version number (which is crucial to any serious, production-level project), what the application does, who to contact if something goes wrong... etc. 
+In other words, all the necessary information for something that runs in production: the name of the app, the version number (which is crucial to any serious, production-level project), what the application does, who to contact if something goes wrong, etc. 
 
 #### Dependencies
 
@@ -104,7 +104,7 @@ Note that in many cases developers go for a `.md` file (short for markdown) beca
 There are also useful if you need to detail the core functions of the application using a static document. 
 In a perfect world, you would create one vignette per shiny page/tab.
 - Function documentation.
-Every function in your package should come with its own documentation, even if only for your future self. 
+Every function in your package should come with its own documentation, even if it is just for your future self.
 "Exported" functions, the one which are available once you run `library(myapp)`, should be fully documented and will be listed in the package help page. 
 Internal functions need less documentation, but documenting them is the best way to be sure you can come back to the app in a few months and still know why things are the way they are, what the pieces of the apps are used for, and how to use these functions
 ^[`{roxygen2}` comes with a `@noRd` tag, that prevents the documentation from being built. This allows to still write the documentation using the same tags as the exported function, without the internal functions being documented in the end package. For example, that is why by default the modules built with `{golem}` version > 0.2.0 come with `@noRd`: you should document them, but chances are your do not need to export them.]
@@ -173,7 +173,7 @@ In order to dockerize your app, create a Dockerfile that lists your package to b
 Then, use as a `CMD` `R -e 'options("shiny.port" = 80, shiny.host = "0.0.0.0"); myuberapp::run_app()'` so that your app will be launched when starting the Docker container. 
 Change the output port according to your needs.
 
-Note that {golem} provides you the Dockerfile you need with `golem::add_dockerfile()`.
+Note that `{golem}` provides you the Dockerfile you need with `golem::add_dockerfile()`.
 
 We will return to Docker containers in a few chapters, notably in the context of building `Dockerfile` for `{golem}`-based applications.
 
@@ -193,7 +193,7 @@ If you need to read some resources before continuing, feel free to have a look a
 
 ## Using Shiny Modules
 
-Modules are one of the most powerful tools for building Shiny Application in a maintainable and sustainable manner.
+Modules are one of the most powerful tools for building Shiny Applications in a maintainable and sustainable manner.
 
 ### Why are we using Shiny modules?
 
@@ -222,7 +222,7 @@ Wait, namespaces?
 Namespaces are a computer science concept created to handle a common issue: how to share the same name for a variable in various places of your program without them conflicting. 
 In other words, how to use an object called `plop` several times in the program, and still be sure that it is correctly used depending on the context. 
 
-R itself has a system for namespaces ; this is what packages do and why you can have `purrr::flatten` and `jsonlite::flatten` on the same computer and inside the same script: the function names are the same, but the two live in different namespaces, and the behavior of both functions can be totally different as the symbol is evaluated inside two different namespaces. 
+R itself has a system for namespaces; this is what packages do and why you can have `purrr::flatten` and `jsonlite::flatten` on the same computer and inside the same script: the function names are the same, but the two live in different namespaces, and the behavior of both functions can be totally different as the symbol is evaluated inside two different namespaces. 
 If you want to learn more about namespaces, please refer to the [7.4 Special environments](https://adv-r.hadley.nz/environments.html#special-environments) chapter from _Advanced R_, or turn to any computer science book: namespaces are pretty common in any programming language.
 
 So, that is what modules are made for: creating small namespaces where you can safely define `ids` without conflicting with other ids in the app.
