--- a/09-step-by-step-prototype.Rmd
+++ b/09-step-by-step-prototype.Rmd
@@ -60,7 +60,7 @@ fs::dir_tree("golex")
 If you are already familiar with R packages, most of these files will appear very familiar to you. 
 That's because a `{golem}` app IS a package.
 
-For more details about these files, please refer to the [Understanding {golem} app structure]() part of this book. 
+For more details about these files, please refer to the [Understanding `{golem}` app structure]() part of this book. 
 In this part, we will go through the `dev/01_start.R` and `dev/02_dev.R` scripts.
 
 ## Setting things up with `dev/01_start.R`
