--- a/15-when_optimize.Rmd
+++ b/15-when_optimize.Rmd
@@ -290,7 +290,7 @@ And, bonus point, `{bench}` takes time to check that the two outputs are the sam
 You can profile Shiny application using the `{profvis}` package, just as any other piece of R code. 
 The only thing to note if you want to use this function on an app built with `{golem}` [@R-golem], you will have to wrap the `run_app()` function in a `print()` function. 
 Long story short, what make the app run is not the function itself, but the printing of the function, so the object returned by `run_app()` itself can not be profiled. 
-See the discussion on this [issue on {golem}](https://github.com/ThinkR-open/golem/issues/146) to learn more about this.
+See the discussion on this [issue on `{golem}`](https://github.com/ThinkR-open/golem/issues/146) to learn more about this.
 
 One other thing that can be optimized when it comes to the user interface is the webpage rendering performance. 
 To do that, we can use standard web development tools: as said several times, a Shiny application IS a web application, so tools that are language agnostic will work with Shiny. 
