--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(comment = "")
 
 The `{golem}` [@R-golem] package is a framework for building production-grade Shiny Application. 
 Lot of the patterns and methodologies described in this book are linked to `{golem}` and packages from the [golemverse](http://golemverse.org/).
-Of course, all the advice developed in this book will still be valid even if you are do not plan to use `{golem}`.
+Of course, all the advice developed in this book will still be valid even if you do not plan to use `{golem}`.
 
 We have quickly introduced `{golem}` in the last chapter, and we will come back to this package many times in the following chapters. 
 So, let's start with an introduction to this package. 
@@ -47,7 +47,7 @@ tools::CRAN_package_db() %>%
   select(Version)
 ```
 
-While the current version of the dev version is: 
+While the current development version is: 
 
 ```{r 04-golem-5 }
 x <- tempfile()
@@ -63,7 +63,7 @@ desc::desc_get_version(x)
 The motivation behind `{golem}` is that building a Proof of Concept application is easy, but things change when the application becomes larger and more complex, and especially when you need to send that app to production. 
 Until recently there has not been any real framework for building and deploying production-grade Shiny Apps.
 This is where `{golem}` comes into play: offering Shiny developers a toolkit for making a stable, easy-to-maintain, and robust production web application with R. 
-`{golem}` has been developed to abstract away the most common engineering tasks (for example, module creation, addition and linking of external CSS or JavaScript file, ...), so you can focus on what matters: building the application. 
+`{golem}` has been developed to abstract away the most common engineering tasks (for example, module creation, addition and linking of external CSS or JavaScript file, etc.), so you can focus on what matters: building the application. 
 Once your application is ready to be deployed, `{golem}` guides you through testing and brings tools for deploying to common platforms.
 
 Some things to keep in mind before using `{golem}`: 
@@ -113,7 +113,7 @@ The `NAMESPACE` file defines how to interact with the rest of the package: what 
 This file will be built when running the documenting process in your R package: `{roxygen2}` will scan all your `.R` files, and build the `man/` + the `NAMESPACE`, by scanning the roxygen tags there. 
 
 Explaining how these files are to be filled and how to document your functions is out of the scope of this book, as they are deeply linked to how you would do that for any other package.
-If you ant to learn more about these, here are some resources you can refer to:
+If you want to learn more about these, here are some resources you can refer to:
 
 + [Writing R Extensions - The DESCRIPTION file](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#The-DESCRIPTION-file)
 + [Writing R Extensions - Package namespaces](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Package-namespaces)
@@ -137,7 +137,7 @@ The `dev/` folder also contains `.R` scripts, and they are inside this folder as
 Inside these `.R` files, you will find the content of your modules (the one added with `golem::add_modules()`) and the utilitarian / business logic functions, built with `golem::add_utils()` and `golem::add_fct()`. 
 If you want to add a standard file (that is to say out of `{golem}` nomenclature), you can also call `usethis::use_r("name")`, which will create a `R/name.R` file. 
 
-If you have built a "classic" Shiny Apps, _i.e_ before `{golem}` was available, or if you started with the standard RStudio template, you might have a series of `source()` and `library()` calls all over the place. 
+If you have built a "classic" Shiny App, _i.e_ before `{golem}` was available, or if you started with the standard RStudio template, you might have a series of `source()` and `library()` calls all over the place. 
 This is not to be done with a `{golem}`-based application: you are leveraging the package infrastructure so that everything inside the `R/` folder is made available internally, without having to `source()` scripts.
 
 Note also that this folder can not contain sub-folders. 
@@ -164,7 +164,7 @@ readLines("golex/R/app_ui.R")[1:17] %>%
   glue::as_glue()
 ```
 
-This piece of the `app_ui.R` is designed to received the counterpart of what you put in your server.
+This piece of the `app_ui.R` is designed to receive the counterpart of what you put in your server.
 Everything here is to be put after the <code>`r readLines("golex/R/app_ui.R")[11]`</code> line. 
 Just as with their server counterparts, the UI side of these elements are the one from the bottom of the file you are creating with `golem::add_module()`.
 
