--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -28,12 +28,12 @@ The idea with this first step is to get a clear idea of what everybody involved 
 
 + From the client/end-users point of view, this steps involves getting a clear idea of what they want the application to do, and to confront this view with the developers to evaluate what is possible to do, how many time it will take to implement desired features, etc.
 
-+ From the developer team point of view, this steps also involves getting a clear idea of what the client is asking, in other word it involves translating the requirements to technical specifications. 
++ From the developer team point of view, this step also involves getting a clear idea of what the client is asking, in other words it involves translating the requirements to technical specifications. 
 For example, the client might write something like "Save the plot inside a database so that we can search for them later on": from an application user point of view, this is a clear feature, from a developer point of view, this requirement can be translated in many ways. 
 
 This first step actually implies a lot of thinking before coding. 
 The main goal of this step is to spend time thinking about the application while you still do not have anything implemented, so that you do not discover blocking elements once it is too late, or at least once you already have written a lot of code. 
-We have all been in a situation during a project where we tell ourselves: "I wish I had know this sooner": working on designing the application before building it helps lowering the chances for this kind of bad surprises. 
+We have all been in a situation during a project where we tell ourselves: "I wish I had known this sooner": working on designing the application before building it helps lowering the chances for this kind of bad surprises. 
 
 This first part of the workflow will span over three chapters: 
 
@@ -46,7 +46,7 @@ We will also quickly introduce concept maps, and list some of the common questio
 
 + Finally, this first part of the workflow covers a gentle introduction to CSS, which might be a crucial skill to  master when it comes to send an application to production: either your clients already have a CSS that they want to include in the application, or they want their application to have the color and design that match the one from the company. 
 Also, when building a professional application, chances are that you will want your app to stand out from the crowd: hence a little bit of CSS. 
-This part is included in the design part because it is something that you might want to think about from the very beginning: for example, some company have pre-existing `{shiny}` templates, they might want to include specific fonts, logo, icons...
+This part is included in the design part because it is something that you might want to think about from the very beginning: for example, some company have pre-existing `{shiny}` templates, they might want to include specific fonts, logo, icons, etc.
 These are things better known before starting to code: it is easier to start working inside a `{shiny}` template than migrating an existing code to a template.
 
 ## Part 2: Prototype 
@@ -57,7 +57,7 @@ As you may know, a Shiny application is an interface (the front-end, or "UI") us
 
 To start on solid ground, you need to build the two (front and back) separately: 
 
-On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions.... everything that does not rely on computation on the back end. 
+On one hand, work on the general appearance, without working on any actual algorithmic implementation: position of the inputs and outputs, general design, interactions, etc. everything that does not rely on computation on the back end. 
 This "UI first" approach will be made possible for Shiny with notably one package, `{shinipsum}` [@R-shinipsum].
 
 On the other hand, you (or someone from your team), will be working on building the back-end logic, which are the actual outputs that are going to be displayed, the algorithm that will compute results, and all the elements that do not need an interactive runtime to work. 
