--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -12,7 +12,7 @@ Whatever your ambitions for your Shiny application are, you should take time tod
 
 A common thing you will hear about Shiny is that it is a good prototyping tool. 
 This can not be denied.
-Building a Proof of Concept (POC) for an app is relatively straightforward if you compare to what it needs to build applications in other languages. 
+Building a Proof of Concept (PoC) for an app is relatively straightforward if you compare to what it needs to build applications in other languages. 
 With Shiny, you can build a "it works on my machine" web application in a couple of hours, and show it to your team, your boss, your investors.
 Thanks to the way Shiny was designed, you do not have to care about websockets, ports, HTML, JavaScript libraries, and all the things that are elegantly bundled into Shiny. 
 
