minifyr is no longer called

--- a/15-when_optimize.Rmd
+++ b/15-when_optimize.Rmd
@@ -494,23 +494,31 @@ Taken from [@Sakamoto2015]
 To minify JavaScript, HTML and CSS files from R, you can use the `{minifyr}` [@R-minifyr] package, that wraps the `node-minify` NodeJS library. 
 For example, compare the size of this file from `{shiny}`:
 
-```{r}
+```{r eval = FALSE}
 fs::file_size(
   system.file("www/shared/shiny.css", package = "shiny")
 ) 
 ```
 
+```{r echo = FALSE}
+cat("8.28K")
+```
+
 To its minified version: 
 
-```{r}
+```{r eval = FALSE}
 minified <- minifyr::minifyr_css_cleancss(
   system.file("www/shared/shiny.css", package = "shiny"), 
   "shinyminifed.css"
 ) 
 ```
 
-```{r}
+```{r eval = FALSE}
 fs::file_size(minified)
+```
+
+```{r}
+cat("5.79K")
 ```
 
 That might not seem like much (a couple of KB) at a small scale, but as it can be done automatically, why not leverage these small performances gain when building larger applications?
