--- a/18-javascript.Rmd
+++ b/18-javascript.Rmd
@@ -712,7 +712,7 @@ const get_rand_beer = () => {
 
 + Observe the event in your server:
 
-```{r eval = FALSE}
+```{r 18-javascript-1-bis, eval = FALSE}
 observeEvent( input$beer , {
   # Do things with beer
 })
