--- a/15-when_optimize.Rmd
+++ b/15-when_optimize.Rmd
@@ -494,30 +494,30 @@ Taken from [@Sakamoto2015]
 To minify JavaScript, HTML and CSS files from R, you can use the `{minifyr}` [@R-minifyr] package, that wraps the `node-minify` NodeJS library. 
 For example, compare the size of this file from `{shiny}`:
 
-```{r eval = FALSE}
+```{r 15-when-optimize-1-bis, eval = FALSE}
 fs::file_size(
   system.file("www/shared/shiny.css", package = "shiny")
 ) 
 ```
 
-```{r echo = FALSE}
+```{r 15-when-optimize-2-bis, echo = FALSE}
 cat("8.28K")
 ```
 
 To its minified version: 
 
-```{r eval = FALSE}
+```{r 15-when-optimize-3-bis, eval = FALSE}
 minified <- minifyr::minifyr_css_cleancss(
   system.file("www/shared/shiny.css", package = "shiny"), 
   "shinyminifed.css"
 ) 
 ```
 
-```{r eval = FALSE}
+```{r 15-when-optimize-4-bis, eval = FALSE}
 fs::file_size(minified)
 ```
 
-```{r}
+```{r 15-when-optimize-5-bis}
 cat("5.79K")
 ```
 
