--- a/manualpackages.bib
+++ b/manualpackages.bib
@@ -6,3 +6,9 @@
     note = {https://github.com/LieberInstitute/spatialLIBD - R package version 0.99.15},
     doi = {10.18129/B9.bioc.spatialLIBD},
 }
+@Manual{R-chromote,
+  title = {chromote: Headless Chrome Web Browser Interface},
+  author = {Winston Chang},
+  year = {2020},
+  note = {R package version 0.0.0.9001},
+}
