--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -460,7 +460,7 @@ To sum up, a good rule to live by is that you should not add a feature for the s
 
 ### About Accessibility
 
-When building professional Shiny applications, you have to keep in mind that, potentially, this app will be consumes by a large audience. 
+When building professional Shiny applications, you have to keep in mind that, potentially, this app will be consumed by a large audience. 
 A large audience means that there is a chance that your app will be used by people with visual, mobility, or maybe cognitive disabilities
 ^[And of course, other type of disabilities.]
 . 
