--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -95,7 +95,7 @@ In which context will they be using your app?
 On what machines?
 Will they be using the app in their office, on their phone while driving a tractor, in a plant, while wearing lab coats? 
 
-Those might seems like weird questions if you are just focusing on the very technical side of the app implementation, but think about where the app will be used: the application used while driving agricultural machines might need less interactive things, bigger fonts, simpler interface, less details and more direct information. 
+Those might seem like weird questions if you are just focusing on the very technical side of the app implementation, but think about where the app will be used: the application used while driving agricultural machines might need less interactive things, bigger fonts, simpler interface, less details and more direct information. 
 If you are building a Shiny app for a team of sellers who are always on the road, chances are they will need an app that they can browse from their mobile. 
 And developing for mobiles requires a different kind of mindset
 ^[For developing an app that is mobile first, you can have a look at the great `{shinyMobile}` [@R-shinyMobile] package, made by the amazing Rinterface team.]
