--- a/08-css.Rmd
+++ b/08-css.Rmd
@@ -4,7 +4,7 @@
 
 ### About CSS
 
-CSS, for `Cascading Style Sheets`, is one of the main technologies that power the web today, along with HTML and JavaScript. 
+CSS, for `Cascading Style Sheets`, is one of the main technologies that powers the web today, along with HTML and JavaScript. 
 HTML is a series of tags that define your web page structure, and JavaScript is a programming language that allows you to manipulate the page (well, it can do a lot more than that, but we are simplifying to make it understandable). 
 CSS is what handles the design, i.e. the visual rendering of the web page: the color of the header, the font, the background, and everything that makes a web page look like it is not from 1983 (again, we are simplifying for the sake of clarity). 
 On every browser, each HTML element has a default style: for example all `<h1>` have the size `2em` and are in bold, and `<strong>` is in bold.
