--- a/09-step-by-step-prototype.Rmd
+++ b/09-step-by-step-prototype.Rmd
@@ -10,7 +10,7 @@ Once we have this structure, package and modules combined, we can start prototyp
 And then, once this two prototyping sides are finished, we work on the integration of everything inside the reactive context.
 
 In this chapter and in chapter 11, we will be presenting the `{golem}` package in more depth.
-`{golem}` is a framework that standardize the process of building production-ready Shiny Applications. 
+`{golem}` is a framework that standardizes the process of building production-ready Shiny Applications. 
 
 ## Create a `{golem}`
 
@@ -96,7 +96,7 @@ Then, call the `golem::set_golem_options()` function, it will add information to
 
 ### Set common Files 
 
-If you want to use the MIT license, add README, a code of conduct, a lifecycle badge, and NEWS
+If you want to use the MIT license, add README, a code of conduct, a lifecycle badge, and NEWS.
 
 ```{r 09-step-by-step-prototype-5, eval = FALSE}
 # You can set another license here
