--- a/10-prototyping.Rmd
+++ b/10-prototyping.Rmd
@@ -55,7 +55,7 @@ And for two main reasons.
 First of all, it helps everybody involved in the application to agree on what the app is supposed to do, and once the UI is set, there should be no "surprise implementation". 
 Well, at least, this is the best way to reduce the number of changes in the app, as the sooner we have a global idea of the app, the better. 
 It is hard to implement a core new feature once the app is 90% finished, while it would have been way easier to implement it if it has been detected from the very start.
-Indeed, implementing core feature once the app is very advanced can be critical, as our application might not have been thought to work the way it now needs to work, so adding certain elements might lead to a need for change in the core architecture of the app.
+Indeed, implementing core features once the app is very advanced can be critical, as our application might not have been thought to work the way it now needs to work, so adding certain elements might lead to a need for change in the core architecture of the app.
 Once we agree on what elements compose the app, there should be no sudden "oh the app needs to do that thing now, sorry I hadn't realized that before".
 
 We can not blame the person ordering the app for not realizing everything needed to build the app: it is really hard to have a mental model of the whole software when we are writing specifications, not to mention when reading them. 
@@ -98,7 +98,7 @@ remotes::install_github("Thinkr-open/shinipsum")
 
 In this package, a series of functions that generates random placeholders. 
 For example, `random_ggplot()` generates random `{ggplot2}` [@R-ggplot2] elements. 
-If we run this code two time, we should get different results
+If we run this code two times, we should get different results
 ^[Well, there is a probability that we will get the same plot twice, and but that is the beauty of randomness.]
 :
 
@@ -220,14 +220,14 @@ In other words, you are applying the rule of the separation of concerns, i.e. yo
 And, last but not least, if you have to implement changes to the back-end functions, it is way easier to check and to share in a static file than in an application.
 
 When doing that, the best way is again to separate things: do not be afraid of writing multiple RMarkdown files, one for each part of the end application. 
-Again, this will help everybody focus on what matter: be it you, your team, or the person ordering the application. 
+Again, this will help everybody focus on what matters: be it you, your team, or the person ordering the application. 
 
 Building the back-end in Rmd files is also a good way to make the back-end "application independent", in the sense that it helps documenting how the algorithms you have been building can be used outside of the application. 
 In many cases, when you are building an application, you are creating functions that contain business logic/domain expertise, and that can in fact be used outside of the application. 
 Writing these functions and how they work together forces you to think about these functions, and also gives a good starting point for anybody familiar with R that would want to start using this back-end toolkit.
 Of course, as you are building your application as a package, it is way easier now: you can share a package with the application inside it, along with a function to launch the app but also functions that can be used outside.
 
-And if you need some data to use as an example, feel free to pick one from `{fakir}`! (See §\@ref(stepprotopype)).
+And if you need some data to use as an example, feel free to pick one from `{fakir}`! (See \@ref(stepprotopype)).
 
 ### Using the Rmd files as a laboratory notebook 
 
